--- a/index.html
+++ b/index.html
@@ -70,3 +70,12 @@
     <script src="app.js"></script>
 </body>
 </html>
+
+FileInputStream serviceAccount =
+new FileInputStream("path/to/serviceAccountKey.json");
+
+FirebaseOptions options = new FirebaseOptions.Builder()
+  .setCredentials(GoogleCredentials.fromStream(serviceAccount))
+  .build();
+
+FirebaseApp.initializeApp(options);
