--- a/index.html
+++ b/index.html
@@ -65,3 +65,8 @@
         </div>
     </div>
 
+    <!-- Librerías JavaScript y Script Principal -->
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.10.2/Sortable.min.js"></script>
+    <script src="app.js"></script>
+</body>
+</html>
