--- a/index.html
+++ b/index.html
@@ -65,6 +65,26 @@
         </div>
     </div>
 
+    <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyBmw298dRS1b5wEuzyyPZV80SE1lO9bA3s",
+    authDomain: "panel-de-presencia.firebaseapp.com",
+    projectId: "panel-de-presencia",
+    storageBucket: "panel-de-presencia.firebasestorage.app",
+    messagingSenderId: "150731028439",
+    appId: "1:150731028439:web:cc556b4f7bd63761dabd92"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+</script>
+    
     <!-- Librerías JavaScript y Script Principal -->
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.10.2/Sortable.min.js"></script>
     <script src="app.js"></script>
