--- a/index.html
+++ b/index.html
@@ -70,16 +70,14 @@
   import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
   // TODO: Add SDKs for Firebase products that you want to use
   // https://firebase.google.com/docs/web/setup#available-libraries
-
-  // Your web app's Firebase configuration
-  const firebaseConfig = {
-    apiKey: "AIzaSyBmw298dRS1b5wEuzyyPZV80SE1lO9bA3s",
-    authDomain: "panel-de-presencia.firebaseapp.com",
-    projectId: "panel-de-presencia",
-    storageBucket: "panel-de-presencia.firebasestorage.app",
-    messagingSenderId: "150731028439",
-    appId: "1:150731028439:web:cc556b4f7bd63761dabd92"
-  };
+const firebaseConfig = {
+            apiKey: "AIzaSyDOHPagA5tTsapHT7mLp9Go-JCAVc4ChhI",
+            authDomain: "ubicaion-8ef85.firebaseapp.com",
+            projectId: "ubicaion-8ef85",
+            storageBucket: "ubicaion-8ef85.appspot.com",
+            messagingSenderId: "629776815605",
+            appId: "1:629776815605:web:65804b46473ea77ed6fcbc",
+            measurementId: "G-WBFY42G0PD"
 
   // Initialize Firebase
   const app = initializeApp(firebaseConfig);
