--- a/index.html
+++ b/index.html
@@ -18,6 +18,38 @@
                     <option value="Manuel de Soto">Manuel de Soto</option>
                     <option value="Juan Lopez">Juan Lopez</option>
                     <option value="Fran Cuevas">Fran Cuevas</option>
+                    <option value="Carlos Garcia">Carlos Garcia</option>
+            <option value="Fernando Zabala">Fernando Zabala</option>
+            <option value="Manuel Martinez">Manuel Martinez</option>
+            <option value="Pedro De Tena">Pedro De Tena</option>
+            <option value="Jose Manuel Jurado">Jose Manuel Jurado</option>
+            <option value="Pepe Ventura">Pepe Ventura</option>
+            <option value="Pepe Lopez">Pepe Lopez</option>
+            <option value="Juan Manuel Perez">Juan Manuel Perez</option>
+            <option value="David Sanchez">David Sanchez</option>
+            <option value="Jonathan Gavira">Jonathan Gavira</option>
+            <option value="Juan Garrcocho">Juan Garrcocho</option>
+            <option value="Carlos Javier Jimenez">Carlos Javier Jimenez</option>
+            <option value="Javier Romero">Javier Romero</option>
+            <option value="Victoria Sanchez-Palencia">Victoria Sanchez-Palencia</option>
+            <option value="Maria Martinez">Maria Martinez</option>
+            <option value="Isabel Mariscal">Isabel Mariscal</option>
+            <option value="Jesus Marchena">Jesus Marchena</option>
+            <option value="Francisco Polo">Francisco Polo</option>
+            <option value="Maria Bilbao">Maria Bilbao</option>
+            <option value="Victor Hernandez">Victor Hernandez</option>
+            <option value="Rocio Espejo">Rocio Espejo</option>
+            <option value="Cristina Vidal">Cristina Vidal</option>
+            <option value="Evelyn Toledo">Evelyn Toledo</option>
+            <option value="Estefania Riebera">Estefania Riebera</option>
+            <option value="Ana Castellano">Ana Castellano</option>
+            <option value="Javier Garcia">Javier Garcia</option>
+            <option value="Rosario Barrios">Rosario Barrios</option>
+            <option value="Cristian Toledo">Cristian Toledo</option>
+            <option value="Susana Burgos">Susana Burgos</option>
+            <option value="Maria Jose Manzano">Maria Jose Manzano</option>
+            <option value="Jesus Zuñiga">Jesus Zuñiga</option>
+                    
                     <!-- Agrega el resto de opciones aquí... -->
                 </select>
                 <button type="submit">Registrar</button>
